--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@capacitor/core": "7.4.1",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "axios": "^1.10.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "storage": "^0.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
